[package]
name = "VibeTerm"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8.1"
tokio = { version = "1", features = ["time"] }
time = "0.3.41"

[features]
custom-protocol = ["tauri/custom-protocol"]
