[package]
name = "VibeTerm"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
tauri = { version = "1.8", features = [ "window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.9"
tokio = { version = "1", features = ["time"] }
time = "0.3.41"
users = "0.11.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "test-util"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
